# ood

./: .gitignore
lab1/DancingDucks_tests/: DancingDucks_tests.cpp  DancingDucks_tests.vcxproj  DancingDucks_tests.vcxproj.filters
lab1/DuckFlyStates/: DanceMinuet.h  DuckFlyStates.vcxproj  DuckFlyStates.vcxproj.filters  FlyNoWay.h  FlyWithWings.h  IQuackBehavior.h  NotDance.h  RedheadDuck.h  RubberDuck.h  SimUDuck.cpp  SqueakBehavior.h  fly-states.sln
lab1/FunctionalDucks/: DanceBehavior.cpp  DanceBehavior.h  DecoyDuck.h  Duck.h  DuckFunctions.h  FlyBehavior.cpp  FlyBehavior.h  FunctionalDucks.cpp  FunctionalDucks.sln  FunctionalDucks.vcxproj  FunctionalDucks.vcxproj.filters  MallardDuck.h  ModelDuck.h  QuackBehavior.cpp  QuackBehavior.h  RedheadDuck.h  RubberDuck.h
lab1/Shapes/: Color.h  IShapeStrategy.h  LineStrategy.h  Picture.h  PictureController.h  RectangleStrategy.h  SVGCanvas.cpp  SVGCanvas.h  Shape.h  ShapeStrategyCreator.h  Shapes.sln  Shapes.vcxproj  Shapes.vcxproj.filters  TextStrategy.h  TriangleStrategy.h  main.cpp
lab1/SimUDuck/: DanceNoWay.h  DecoyDuck.h  Duck.h  DuckFunctions.h  FlyWithWings.h  IDanceBehavior.h  MallardDuck.h  ModelDuck.h  QuackBehavior.h  RubberDuck.h  SimUDuck.cpp  SimUDuck.sln  SimUDuck.vcxproj  SimUDuck.vcxproj.filters
lab1/dancing-ducks/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h  RubberDuck.h  SimUDuck.vcxproj  SimUDuck.vcxproj.filters
lab10/: README.md
lab2/WeatherStation/: Display.h  Observer.h  SensorStats.h  StatsDisplay.h  WeatherStation.cpp  WeatherStation.sln  WeatherStation.vcxproj  WeatherStation.vcxproj.filters  main.cpp
lab2/WeatherStationDuo/: CStats.h  Display.h  Observer.h  SensorStats.h  StatsDisplay.h  WeatherData.h  WeatherStationDuo.sln  WeatherStationDuo.vcxproj  WeatherStationDuo.vcxproj.filters  main.cpp
lab2/WeatherStationPro+Duo/: CStats.h  Display.h  Observer.h  StatsDisplay.h  WeatherData.h  WeatherStationPro+Duo.sln  WeatherStationPro+Duo.vcxproj  WeatherStationPro+Duo.vcxproj.filters  main.cpp
lab2/WeatherStationProEvent/: Display.h  Observer.h  StatsDisplay.h  WeatherData.h  WeatherStationProEvent.sln  WeatherStationProEvent.vcxproj  main.cpp
lab2/WeatherStation_tests/: WeatherStation_tests.cpp  WeatherStation_tests.vcxproj  WeatherStation_tests.vcxproj.filters
lab3/Coffee/: BeverageSelector.cpp  BeverageSelector.h  Beverages.h  Coffee.sln  Coffee.vcxproj  Coffee.vcxproj.filters  Condiments.h  IBeverage.h  main.cpp
lab3/Streams/: CFileInputStream.h  CFileOutputStream.h  CInputStreamDecorator.h  CMemoryInputStream.h  CMemoryOutputStream.h  COutputStreamDecorator.h  IStream.h  Series.h  Streams.sln  Streams.vcxproj  Streams.vcxproj.filters  main.cpp
lab4/ShapesFactory/: CClient.h  CDesigner.h  CEllipse.h  CPainter.h  CPictureDraft.h  CRectangle.h  CRegularPolygon.h  CShape.h  CShapeFactory.cpp  CShapeFactory.h  CTriangle.h  Color.h  ICanvas.h  IDesigner.h  IShapeFactory.h  SVGCanvas.h  ShapesFactory.sln  ShapesFactory.vcxproj  ShapesFactory.vcxproj.filters  input.txt  main.cpp
lab5/HtmlEditor/: CMakeLists.txt  commands.txt  main.cpp
lab5/HtmlEditor/CommandHandler/: CommandHandler.h
lab5/HtmlEditor/Document/: CConstDocumentItem.h  CDocument.h  CDocumentItem.h  IDocument.h
lab5/HtmlEditor/Document/Command/: CCommand.h  DeleteItemCommand.h  ICommand.h  InsertImageCommand.h  InsertParagraphCommand.h  ReplaceTextCommand.h  ResizeImageCommand.h  SetTitleCommand.h
lab5/HtmlEditor/Document/History/: History.h
lab5/HtmlEditor/Document/Image/: CImage.h  IImage.h
lab5/HtmlEditor/Document/Paragraph/: CParagraph.h  IParagraph.h
lab5/HtmlEditor/Menu/: Menu.h
lab5/HtmlEditor/Utils/: FileUtils.h  HtmlUtils.h
lab5/HtmlEditor/test/: CDocumentTest.cpp  CMenuTest.cpp  DeleteItemCommandTest.cpp  HistoryTest.cpp  InsertImageCommandTests.cpp  InsertParagraphCommandTest.cpp  ReplaceTextCommandTest.cpp  ResizeImageCommandTests.cpp  SetTitleCommandTest.cpp  main.cpp
lab6/Adapter/: Adapter.sln  ModernGraphicsAdapter.h  ModernGraphicsClassAdapter.h  ObjectAdapter.vcxproj  ObjectAdapter.vcxproj.filters  Point.h  graphics_lib.h  main.cpp  (+2 more)
lab7/composite/: .gitignore  CMakeLists.txt  CMenu.h  CommandHandler.h  CommonTypes.h  main.cpp
lab7/composite/Canvas/: ICanvas.h  SVGCanvas.h
lab7/composite/Factory/: CShapeFactory.h  IShapeFactory.h
lab7/composite/Group/: CShapeGroup.h  IShapeGroup.h
lab7/composite/Shape/: CEllipse.h  CRectangle.h  CShape.h  CTriangle.h  IShape.h  IShapes.h
lab7/composite/Slide/: CSlide.h  ISlide.h
lab7/composite/Style/: CStyle.h  IStyle.h
lab7/composite/test/: ShapeGroupTest.cpp  main.cpp
lab8/GumballMachine/: CMakeLists.txt  main.cpp
lab8/GumballMachine/Machine/: CGumballMachine.h  GumBallMachineWithDynamicallyCreatedState.h  IGumballMachine.h  NaiveGumBallMachine.h
lab8/GumballMachine/State/: CHasQuarterState.h  CNoQuarterState.h  CSoldOutState.h  CSoldState.h  IState.h
lab8/GumballMachine/test/: MachineTest.cpp  StatesTest.cpp  main.cpp
lab8/MultiGumballMachine/: CMakeLists.txt  CommandHandler.h  Menu.h  main.cpp
lab8/MultiGumballMachine/Machine/: CMultiGumballMachine.h  CNaiveMultiGumballMachine.h  IGumballMachine.h
lab8/MultiGumballMachine/State/: CHasQuarterState.h  CNoQuarterState.h  CSoldOutState.h  CSoldState.h  IState.h
lab8/MultiGumballMachine/test/: MultiGumballMachineTest.cpp  NaiveMultiGumballMachineTest.cpp  StatesTest.cpp
lab9/: CMakeLists.txt  CoW.h  Geom.h  main.cpp
lab9/Drawer/: Drawer.h
lab9/Image/: Image.h  ImageService.h
lab9/Tile/: Tile.h
lab9/test/: main.cpp
(+39 files in other folders)
